# rust_login

./: .gitignore  Cargo.toml  README.md  README_zh.md
conf/: 127.0.0.1-key.pem  127.0.0.1.pem  application.yaml  log4rs.yaml
db/mysql/src/: schema.rs
migrations/2020-06-16-014400_create_login_info/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs
