[package]
name = "rust_login"
version = "0.1.0"
authors = ["Tianlang <tianlangstudio@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2"
actix-rt="1"
actix-session="0.3"
blake2 = "0.8"

serde="1"
