[package]
name = "rust_login"
version = "0.1.0"
authors = ["Tianlang <tianlangstudio@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web={version = "2.0.0", features=["rustls"]}
actix-rt="1"
actix-session="0.3"
blake2 = "0.8"
rustls = "0.16"
serde="1"
actix-files = "0.2.2"
config="0.10"
log = "0.4"
log4rs="0.12"

# database 
diesel = {version ="1", features=["mysql","r2d2"]} 
r2d2 = ">= 0.8, < 0.9"